Fix CSFG logo alignment on xs screens.

--- a/csfieldguide/static/scss/website.scss
+++ b/csfieldguide/static/scss/website.scss
@@ -327,6 +327,8 @@ a {
   }
 }
 
-.homepage-center {
-  max-width: inherit !important;
+@include media-breakpoint-down(xs) {
+  .homepage-center {
+    max-width: inherit !important;
+  }
 }
